fix(SLB-358): reduce vertical spacing between fields

--- a/packages/ui/src/iframe.css
+++ b/packages/ui/src/iframe.css
@@ -27,9 +27,14 @@ h1 {
 }
 
 /* Vertical spacing */
-.webform-submission-form > *:not(:last-child) {
-  @apply mb-10;
+.webform-submission-form .webform-flexbox {
+  @apply md:my-0 gap-y-4 md:gap-y-0 flex flex-col md:flex-row;
 }
+
+.webform-submission-form > *:not(:last-child) {
+  @apply mb-4 md:mb-6;
+}
+
 
 .fieldset-wrapper > *:not(:last-child) {
   @apply mb-5;
